# simple-fastapi

./: Dockerfile  docker-compose.yml  main.py  pyproject.toml
